--- a/about.html
+++ b/about.html
@@ -19,12 +19,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/GFCA/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="/GFCA/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -42,7 +42,7 @@
                             <li><a class="dropdown-item" href="#">Write For Us</a></li>
                         </ul>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/GFCA/contact.html">Contact Us</a>
                     </li>
 
                     </li>
