--- a/index.html
+++ b/index.html
@@ -282,7 +282,12 @@
             </form>
           </div>
         </div>
-    
+         <div class="location d-flex">
+            <h2 style="font-family: 'Courier New', Courier, monospace;">
+                Location : 
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d259370.49253713127!2d76.876044052369!3d28.457590891295208!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1793c688c22d%3A0xb4953022a348411d!2sGfca%20India%20Web%20Development%20%26%20Coding!5e0!3m2!1sen!2sin!4v1722144533593!5m2!1sen!2sin" width="200px" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </h2>
+        </div>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
           <p>© 2024 Company, Inc. All rights reserved.</p>
           <ul class="list-unstyled d-flex">
